[package]
name = "vndb"
version = "0.11.0"
authors = ["Douman <douman@gmx.se>"]
description = "Kawaii VNDB API"
license = "MIT"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
keywords = ["vndb"]

repository = "https://github.com/DoumanAsh/vndb.rs"
documentation = "https://docs.rs/vndb"

readme = "README.md"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.rustls]
version = "0.19"
default-features = false
optional = true

[dependencies.webpki-roots]
version = "0.21"
optional = true

[dependencies.webpki]
version = "0.21"
optional = true

[dependencies.tokio]
version = "1.11"
optional = true
features = ["net", "io-util"]

[dependencies.tokio-rustls]
version = "0.22"
optional = true

[dependencies]
serde_json = "1"

[features]
default = []
# Enables tokio client
tokio-on = ["tokio", "tokio-rustls"]
# Eanbles rustls
rustls-on = ["rustls", "webpki", "webpki-roots"]

[dev-dependencies.tokio]
version = "1.0"
features = ["rt", "macros"]

[package.metadata.docs.rs]
features = ["rustls-on", "tokio-on"]
